--- a/movies.html
+++ b/movies.html
@@ -42,6 +42,12 @@
                 <a href="https://www.amazon.com/Stop-Making-Sense-David-Byrne/dp/B00IXXT53O/ref=sr_1_1?ie=UTF8&qid=1493593149&sr=8-1&keywords=stop+making+sense" target="_blank"><img src="img/stop-making-sense.jpg" alt="Stop Making Sense"><p>Stop Making Sense</p><small>Jonathan Demme</small></a>
               </li>
               <li>
+                <a href="https://www.amazon.com/Malcolm-X-Denzel-Washington/dp/B000QFQE4U/ref=sr_1_3?ie=UTF8&qid=1525813041&sr=8-3&keywords=malcolm+x" target="_blank"><img src="img/malcolm-x-movie.jpg" alt="Malcolm X"><p>Malcom X</p><small>Spike Lee</small></a>
+              </li>
+              <li>
+                <a href="https://www.amazon.com/Tangerine-Alla-Tumanian/dp/B017I241HK/ref=sr_1_8?ie=UTF8&qid=1525812895&sr=8-8&keywords=tangerine" target="_blank"><img src="img/tangerine.jpg" alt="Tangerine"><p>Tangerine</p><small>Sean Baker</small></a>
+              </li>
+              <li>
                 <a href="https://www.amazon.com/Happiness-Lara-Flynn-Boyle/dp/B00N8MC4LA/ref=sr_1_2?ie=UTF8&qid=1493593176&sr=8-2&keywords=happiness+movie" target="_blank"><img src="img/happiness.jpg" alt="Happiness"><p>Happiness</p><small>Todd Solondz</small></a>
               </li>
               <li>
