--- a/music.html
+++ b/music.html
@@ -36,46 +36,53 @@
             </div>
             <ul class="favoritesGrid">
               <li>
-                <a href="#"><img src="img/somery.jpg" alt="Sommery"><p> Sommery</p><small>Descendents</small></a>
+                <a href="https://www.amazon.com/Somery-Explicit-Descendents/dp/B000QZY45Q/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813836&sr=1-1-mp3-albums-bar-strip-0&keywords=descendents+somery"><img src="img/somery.jpg" alt="Sommery"><p> Sommery</p><small>Descendents</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/a-seat-at-the-table.jpg" alt="A seat at the table"><p>A Seat at the Table</p><small>Solange</small></a>
+                <a href="https://www.amazon.com/Seat-at-Table-Explicit/dp/B01LZMNFK1/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813814&sr=1-1-mp3-albums-bar-strip-0&keywords=solange+a+seat+at+the+table"><img src="img/a-seat-at-the-table.jpg" alt="A seat at the table"><p>A Seat at the Table</p><small>Solange</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/ugly.jpg" alt="Ugly"><p>Ugly</p><small>Screaming Females</small></a>
+                <a href="https://www.amazon.com/Ugly-Screaming-Females/dp/B00HEWYNNM/ref=sr_1_1?ie=UTF8&qid=1525813791&sr=8-1&keywords=screaming+females+ugly"><img src="img/ugly.jpg" alt="Ugly"><p>Ugly</p><small>Screaming Females</small></a>
+              </li>
               </li>
               <li>
-                <a href="#"><img src="img/dripping.jpg" alt="Dripping"><p>Dripping</p><small>Pile</small></a>
+                <a href="https://www.amazon.com/Julie-Ruin/dp/B00000DG24/ref=sr_1_3?ie=UTF8&qid=1525813219&sr=8-3&keywords=julie+ruin"><img src="img/julie-ruin.jpg" alt="Julie Ruin"><p>Julie Ruin</p><small>Julie Ruin</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/let-it-be.jpg" alt="Let it Be"><p>Let it Be</p><small>The Replacements</small></a>
+                <a href="https://www.amazon.com/This-Happening-Deluxe-LCD-Soundsystem/dp/B004EPU62O/ref=sr_1_5?s=dmusic&ie=UTF8&qid=1525813278&sr=1-5-mp3-albums-bar-strip-0&keywords=lcd+soundsystem"><img src="img/this-is-happening.jpg" alt="This is Happening"><p>This is Happening</p><small>LCD Soundsystem</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/rumours.jpg" alt="Rumours"><p>Rumours</p><small>Fleetwood Mac</small></a>
+                <a href="https://www.amazon.com/Dripping-Pile/dp/B0168UJY34/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813514&sr=1-1-mp3-albums-bar-strip-0&keywords=pile+dripping"><img src="img/dripping.jpg" alt="Dripping"><p>Dripping</p><small>Pile</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/ultimate-collection.jpg" alt="The Ultimate Collection"><p>The Ultimate Collection</p><small>Roy Orbison</small></a>
+                <a href="https://www.amazon.com/Let-Be-Explicit-Replacements/dp/B001LJZ7F2/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813532&sr=1-1-mp3-albums-bar-strip-0&keywords=replacements+let+it+be"><img src="img/let-it-be.jpg" alt="Let it Be"><p>Let it Be</p><small>The Replacements</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/dandelion-gum.jpg" alt="Dandelion Gum"><p>Dandelion Gum</p><small>Black Moth Super Rainbow</small></a>
+                <a href="https://www.amazon.com/Rumours-Fleetwood-Mac/dp/B00B1MHXY2/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813548&sr=1-1-mp3-albums-bar-strip-0&keywords=rumors"><img src="img/rumours.jpg" alt="Rumours"><p>Rumours</p><small>Fleetwood Mac</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/saal.jpg" alt="Saal"><p>Saal</p><small>Serengeti</small></a>
+                <a href="https://www.amazon.com/Ultimate-Collection-Roy-Orbison/dp/B01LRZ4RFU/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813572&sr=1-1-mp3-albums-bar-strip-0&keywords=roy+orbison+the+ultimate+collection"><img src="img/ultimate-collection.jpg" alt="The Ultimate Collection"><p>The Ultimate Collection</p><small>Roy Orbison</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/the-woods.jpg" alt="The Woods"><p>The Woods</p><small>Sleater Kinney</small></a>
+                <a href="https://www.amazon.com/Dandelion-Black-Moth-Super-Rainbow/dp/B015YQ7GF6/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813594&sr=1-1-mp3-albums-bar-strip-0&keywords=dandelion+gum"><img src="img/dandelion-gum.jpg" alt="Dandelion Gum"><p>Dandelion Gum</p><small>Black Moth Super Rainbow</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/loveless.jpg" alt="Loveless"><p>Loveless</p><small>My Bloody Valentine</small></a>
+                <a href="https://graveface.bandcamp.com/album/serengeti-saal"><img src="img/saal.jpg" alt="Saal"><p>Saal</p><small>Serengeti</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/remain-in-light.jpg" alt="Remain in Light"><p>Remain in Light</p><small>Talking Heads</small></a>
+                <a href="https://www.amazon.com/Woods-Sleater-Kinney/dp/B000YN4B4E/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813674&sr=1-1-mp3-albums-bar-strip-0&keywords=sleater+kinney+the+woods"><img src="img/the-woods.jpg" alt="The Woods"><p>The Woods</p><small>Sleater Kinney</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/dear-you.jpg" alt="Dear You"><p>Dear You</p><small>Jawbreaker</small></a>
+                <a href="https://www.amazon.com/Loveless-My-Bloody-Valentine/dp/B001EBRJXU/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813697&sr=1-1-mp3-albums-bar-strip-0&keywords=my+bloody+valentine"><img src="img/loveless.jpg" alt="Loveless"><p>Loveless</p><small>My Bloody Valentine</small></a>
               </li>
               <li>
-                <a href="#"><img src="img/ex-hex.jpg" alt="Ex Hex"><p>Ex Hex</p><small>Mary Timony</small></a>
+                <a href="https://www.amazon.com/Remain-Light-Talking-Heads/dp/B001OGRQAQ/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813718&sr=1-1-mp3-albums-bar-strip-0&keywords=remain+in+light"><img src="img/remain-in-light.jpg" alt="Remain in Light"><p>Remain in Light</p><small>Talking Heads</small></a>
+              </li>
+              <li>
+                <a href="https://www.amazon.com/Dear-You-Jawbreaker/dp/B001HE5J2W/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813735&sr=1-1-mp3-albums-bar-strip-0&keywords=dear+you+jawbreaker"><img src="img/dear-you.jpg" alt="Dear You"><p>Dear You</p><small>Jawbreaker</small></a>
+              </li>
+              <li>
+                <a href="https://www.amazon.com/Ex-Hex-Mary-Timony/dp/B007OM6SXA/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813753&sr=1-1-mp3-albums-bar-strip-0&keywords=mary+timony+ex+hex"><img src="img/ex-hex.jpg" alt="Ex Hex"><p>Ex Hex</p><small>Mary Timony</small></a>
               </li>
             </ul>
           </main>
