--- a/sony-pictures.html
+++ b/sony-pictures.html
@@ -24,7 +24,7 @@
           </header>
           <main role="main">
             <div class="projectDetail" id="sonyDetail">
-              <h2>SonyPictures.com</h2>
+              <h2>Sony Pictures</h2>
               <h3>UX and UI Design</h3>
               <p>Sonypictures.com is the public face of Sony Pictures Entertainment. Representing titles from Sony Pictures Home Entertainment, Sony Pictures Television and Motion Pictures Domestic, in addition to Crackle and Sony Rewards, there are over 3000 titles that are managed and presented through Sonypictures.com.</p> 
               <p>Sony Pictures needed to update both the front-end look and feel of their site, as well as the administrative experience, and thus decided to build out a brand new site with Drupal 8. Partnering with the Design + UX team for the front-end design and UI, Metal Toad created a Drupal 8 instance which allows administrators to manage content across multiple departments from within the CMS, while creating an engaging and dynamic showcase for Sony Pictures titles and properties.</p>
