--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <li class="projectSeven"><a href="ux.html">UX Work</a></li>
                 <li class="projectEight"><a href="digital-diagrams.html">Digital Diagrams</a></li>
                 <li class="projectNine"><a href="project-firefly.html">Project Firefly</a></li>
+                <li class="projectEleven"><a href="lettering.html">Lettering and Calligraphy</a></li>
                 <li class="projectTen"><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                <!-- <li class="projectEleven"><a href="lettering.html">Lettering and Calligraphy</a></li> -->
               </ul>
             </div><!--Close Work Div-->
           </main>
