--- a/lettering.html
+++ b/lettering.html
@@ -24,14 +24,34 @@
           </header>
           <main role="main">
             <div class="projectDetail" id="letteringDetail">
-              <h2>UNFI Blue Marble</h2>
-              <h3>UX, UI Design</h3>
-              <p>Overhaul of UNFI Blue Marble's product information management system. Includes UX and UI. Handoff was accompanied by a style guide created for those who maintain the platform to use.</p>
+              <h2>Lettering and Calligraphy</h2>
+              <p>One of my favorite books is <i>The Elements of Typographic Style.</i> One of my favorite pastimes is calligraphy. One of my favorite subjects is history. Put these together, add two TypeCon conferences and you gain a deep interest and understanding of typography and its history.</p>
+              <p>The historical context, connotations, and purpose of a typeface informs my decision of what is used for a project. This includes how a typeface has been previously used, how that use has impacted and influenced different cultures, and what purpose the typeface was designed to serve, whether it was designed for on-screen, printed, or display use (to name a few.)</p>
+              <p>In addition to diving into the history of individual typefaces, I've practiced calligraphy for a number of years to understand the system of components that combine to create an individual letter. Different hands of calligraphy inform my understanding of the history of writing, how each style developed and to go full circle, how these styles influence the type we see today.</p>
+              <p>My knowledge of calligraphy, typography, and lettering informs every project I touch. If you're going to ask about my favorite typeface I'll just say I lean toward serif faces.</p>
+              <p>Get a small glimpse of calligraphy work below.</p>
             </div>
             <div id="cssContainer">
               <div class="projectImages">
-                <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
+              <figure class="figurePad">
+                <img class="full-width" src="img/engrossers-script-1.png" alt="Engrossers Script">
+              </figure>
+            <figure class="figurePad">
+              <img class="full-width" src="img/engrossers-script-2.png" alt="Engrossers Script">
+            </figure>
+            <figure class="figurePad">
+              <img src="img/lettering-3.jpg" alt="Brush Script">
+            </figure>
+            <figure class="figurePad">
+              <img src="img/lettering-4.jpg" alt="Humanist Bookhand">
+            </figure>
+            <figure class="figurePad">
+              <img src="img/lettering-5.jpg" alt="Humanist Bookhand">
               </div>
+            </figure>
+            </div>
+
+
                 <div id="moreProjects">
                   <div class="moreProjects">
                     <h2>More Projects</h2><br>
