--- a/metal-toad.html
+++ b/metal-toad.html
@@ -96,6 +96,7 @@
                      <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                      <li><a href="project-firefly.html">Project Firefly</a></li>
                      <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
+                     <li><a href="lettering.html">Lettering and Calligraphy</a></li>
                    </ul>
                  </div>
                </div>
