--- a/oshr.html
+++ b/oshr.html
@@ -35,6 +35,9 @@
             <div id="cssContainer">
               <div class="projectImages">
             </figure>
+                <figure>
+                <img class="full-width" src="img/oshr-sketches.png" alt="OSHR Logo"/>
+              </figure>
               <figure class="figurePad">
                 <img class="oshrLogo" src="img/oshr-2.png" alt="OSHR Logo"/>
               </figure>
@@ -97,6 +100,7 @@
                       <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
+                      <li><a href="lettering.html">Lettering and Calligraphy</a></li>
                     </ul>
                   </div>
                 </div>
