--- a/ux.html
+++ b/ux.html
@@ -51,6 +51,7 @@
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
                       <li><a href="lettering.html">Lettering and calligraphy</a></li>
+                      <li><a href="lettering.html">Lettering and Calligraphy</a></li>
                     </ul>
                   </div>
                 </div>
