Updated broken things
updated broken things, music

--- a/music.html
+++ b/music.html
@@ -67,6 +67,9 @@
                 <a href="https://www.amazon.com/Dandelion-Black-Moth-Super-Rainbow/dp/B015YQ7GF6/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813594&sr=1-1-mp3-albums-bar-strip-0&keywords=dandelion+gum"><img src="img/dandelion-gum.jpg" alt="Dandelion Gum"><p>Dandelion Gum</p><small>Black Moth Super Rainbow</small></a>
               </li>
               <li>
+                <a href="https://www.amazon.com/Aint-That-Good-News-Remastered/dp/B00G79FGCA/ref=sr_1_1?ie=UTF8&qid=1531176714&sr=8-1&keywords=aint+that+good+news"><img src="img/aint-that-good-news.jpg" alt="Ain't That Good News"><p>Ain't That Good News</p><small>Sam Cooke</small></a>
+              </li>
+              <li>
                 <a href="https://graveface.bandcamp.com/album/serengeti-saal"><img src="img/saal.jpg" alt="Saal"><p>Saal</p><small>Serengeti</small></a>
               </li>
               <li>
@@ -74,6 +77,9 @@
               </li>
               <li>
                 <a href="https://www.amazon.com/Loveless-My-Bloody-Valentine/dp/B001EBRJXU/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813697&sr=1-1-mp3-albums-bar-strip-0&keywords=my+bloody+valentine"><img src="img/loveless.jpg" alt="Loveless"><p>Loveless</p><small>My Bloody Valentine</small></a>
+              </li>
+              <li>
+                <a href="https://www.amazon.com/Velvet-Rope-Explicit-Janet-Jackson/dp/B000TEPJMG/ref=sr_1_1?ie=UTF8&qid=1531176446&sr=8-1&keywords=janet+jackson+velvet+rope"><img src="img/velvet-rope.jpg" alt="Velvet Rope"><p>Velvet Rope</p><small>Janet Jackson</small></a>
               </li>
               <li>
                 <a href="https://www.amazon.com/Remain-Light-Talking-Heads/dp/B001OGRQAQ/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1525813718&sr=1-1-mp3-albums-bar-strip-0&keywords=remain+in+light"><img src="img/remain-in-light.jpg" alt="Remain in Light"><p>Remain in Light</p><small>Talking Heads</small></a>
