--- a/peci.html
+++ b/peci.html
@@ -47,14 +47,13 @@
                     <h2>More Projects</h2><br>
                   </div>
                   <div class="projectList">
-                    <ul>
-                      <li><a href="peci.html">PECI: A Legacy in Common</a></li>               
+                    <ul>             
                       <li><a href="sony-pictures.html">Sony Pictures</a></li>
                       <li><a href="oshr.html">Open Source unConference</a></li>
                       <li><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
                       <li><a href="code-girl.html">Code Girl</a></li>
                       <li><a href="unfi.html">UNFI Blue Marble PIM</a></li>
-                      <li><a href="ux.html">UX Work/a></li>
+                      <li><a href="ux.html">UX Work</a></li>
                       <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
