--- a/index.html
+++ b/index.html
@@ -29,17 +29,30 @@
             </div>
             <div id="work" class="projects">
               <ul>
-                <li class="projectOne"><a href="peci.html">PECI: A Legacy in Common</a></li>
-                <li class="projectTwo"><a href="sony-pictures.html">Sony Pictures</a></li>
-                <li class="projectFour"><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
-                <li class="projectFive"><a href="code-girl.html">Code Girl</a></li>
-                <li class="projectThree"><a href="oshr.html">Open Source UnConference</a></li>
-                <li class="projectSix"><a href="unfi.html">UNFI Blue Marble Product Information Management (PIM) System</a></li>
-                <li class="projectSeven"><a href="ux.html">UX Work</a></li>
-                <li class="projectEight"><a href="digital-diagrams.html">Digital Diagrams</a></li>
-                <li class="projectNine"><a href="project-firefly.html">Project Firefly</a></li>
-                <li class="projectEleven"><a href="lettering.html">Lettering and Calligraphy</a></li>
-                <li class="projectTen"><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
+                <li class="projectOne"><a href="peci.html">PECI: A Legacy in Common</a><p>Content Strategy,<br> Research,<br> Digital + Responsive Design</p></li>
+
+                <li class="projectTwo"><a href="sony-pictures.html">Sony Pictures</a>
+                <p>UI,<br> UX Design:<br> User Flow,<br> Wireframing,<br> Protyping</p></li>
+                <li class="projectFour"><a href="metal-toad.html">Metal Toad Brand Refresh</a>
+                <p>UX Research:<br> Competitive Analysis,<br> Buyer Personas,<br> Branding,<br> Design</p></li>
+                <li class="projectFive"><a href="code-girl.html">Code Girl</a>
+                <p>Concept,<br> Design,<br> Typography</p></li>
+                <li class="projectThree"><a href="oshr.html">Open Source UnConference</a>
+                <p>Branding,<br> Design<br></p></li>
+                <li class="projectSix"><a href="unfi.html">UNFI Blue Marble Product Information Management (PIM) System</a>
+                <p>UI,<br> UX Design,<br> Design System</li>
+                <li class="projectSeven"><a href="ux.html">UX Work</a>
+                <p>UX Audits,<br> Pitches,<br> User Flows,<br> Wireframing,<br> Prototyping,<br> Design in Browser,<br> Design Systems</p>
+                </li>
+                <li class="projectEight"><a href="digital-diagrams.html">Digital Diagrams</a>
+                <p>Information Design</p></li>
+                <li class="projectNine"><a href="project-firefly.html">Project Firefly<br></a>
+                <p>UI, Responsive Design</p>
+                </li>
+                <li class="projectEleven"><a href="lettering.html">Lettering and Calligraphy</a>
+                <p>Typography,<br> Hand-made</p></li>
+                <li class="projectTen"><a href="holiday-card.html">Metal Toad Holiday Card</a>
+                <p>Concept,<br> design,<br> typography</p></li>
               </ul>
             </div><!--Close Work Div-->
           </main>
