--- a/resume.html
+++ b/resume.html
@@ -25,57 +25,70 @@
           <main role="main">
             <div id="resumeCssGrid">
               <div class="left">
-                <div class="education">
-                  <h2>Education</h2>
-                  <p><span class="college">Moore College of Art & Design</span><br>
-                  Philadelphia, PA<br>
-                  BFA, Graphic Design, 2011<br></p>
-                  <p><span class="college">Epicodus</span><br>
-                  Portland, OR<br>
-                  Intro to Programming Course, 2017<br></p>
-                  <p><span class="college">Treehouse</span><br>
-                  Portland, OR<br>
-                  Front End Web Development, <em>Ongoing</em><br>
-                  Web Design, <em>Ongoing</em><br>
-                  Learn WordPress, 2015</p>
-
-                </div>
                 <div class="skills">
                   <h2>Skills</h2>
-                  <p>UX, UI, Frontend Design, Print Design, Lettering, Vector Illustration, Calligraphy</p>
+                  <p>Visual + digital design,
+                  UI, UX research, UX design,
+                  front-end design, design
+                  systems, branding, project management, Agile, +</p>
                 </div>
                 <div class="tools">
                   <h2>Tools</h2>
-                  <p>Adobe CC, Sketch, HTML, CSS, JavaScript, Git, Github, Bootstrap, JQuery, WordPress, InVision, Keynote</p>
+                  <p>Adobe CC, Sketch, InVision, HTML, CSS, JavaScript, Git, GitHub, Keynote, WordPress, Slack, Basecamp, +
+                </div>
+                <div class="education">
+                  <h2>Education</h2>
+                  <p><span class="college">Moore College of Art & Design<br>
+                  Philadelphia, PA</span><br>
+                  BFA, Graphic Design, 2011<br></p>
+                  <p><span class="college">Human Interaction Design Foundation</span><br>
+                  UX Design, 2017<br></p>
+                  <p><span class="college">Epicodus<br>
+                  Portland, OR</span><br>
+                  Intro to Programming Course, 2017<br></p>
+                  <p><span class="college">Treehouse<br>
+                  Portland, OR</span><br>
+                  Front End Web Development, 2016<br>
+                  Web Design, 2016<br>
+                  WordPress Development, 2015</p>
                 </div>
               </div>
               <div class="experience">
                 <h2>Experience</h2>
                 <div class="expDetail">
+                  <p><span class="title"><a href="https://rachel-gibbons.com/" target="_blank">Design + Direction</a><br>
+                  08.18&ndash;Present<br>Portland, OR + Remote</span></p>
+                  <p>Contract visual, digital, and UX design.</p>
+                </div>
+                <div class="expDetail">
                   <p><span class="title"><a href="https://www.metaltoad.com/" target="_blank">Metal Toad</a><br>
-                  Designer, February 2016&ndash;Present<br>Portland, OR</span><br>
-                  I currently support the Design & UX team at Metal Toad</p>
+                  Senior Designer, 02.16&ndash;07.18<br>Portland, OR</span></p>
+                  <p>As one of two designers at Metal Toad I merged the capabilities of brand engagement, project management, UX and digital capabilities, people management, and leadership.</p>
+                  <p>Clients included: Sony Pictures, Providence Health Plan, UNFI, Golden Globes, Metal Toad, Cambia Grove, and the Lund Report</p>
                 </div>
                 <div class="expDetail">
                   <p><span class="title"><a href="https://www.clearesult.com/" target="_blank">CLEAResult</a><br>
-                  Designer, June 2013&ndash;February 2016<br>Portland, OR</span><br>
-                  Reporting directly to the Art Director, responsible for assisting in B2C and B2B client projects and campaigns from creative concept to execution, including collaborating with copywriters and project managers, design, and coordination of print and web production.</p>
+                  Designer, 06.13&ndash;02.16<br>Portland, OR</span></p>
+                  <p>Focusing on design I paired my brand expertise, digital, and front-end capabilities to work on both print and digital strategy for B2B and B2C clients, including A/B testing, responsive web and portal design, and implementation of the use of smart technologies.</p> 
+                  <p>Clients included: PGE, Pacific Power, Southern California Edison (SCE), Pacific Gas & Electric (PG&E) and a number of other utility clients based both in the NW and spread throughout the country.</p>
                 </div>
                 <div class="expDetail">
                   <p><span class="title"><a href="http://dansimrell.com/" target="_blank">Dan Simrell Adverstising</a></br>
-                  Designer, September 2012&ndash;May 2013<br>Scranton, PA</span><br>
-                  Oversaw creative print and web projects for small business clients from concept to execution, including design, client presentation, and production coordination.</p>
+                  Lead Designer, 09.12&ndash;05.13<br>Scranton, PA</span></p>
+                  <p>Led brand and digital projects for SMB clients in the Northeastern Pennsylvania region. As a small agency this is where I began to hone my expertise in areas outside of design including project management, client presentation, and leadership.</p>
+                  <p>Leading as the sole designer I saw all projects through strategic concept to print or digital implementation.</p>
                 </div>
                 <div class="expDetail">
                   <p><span class="title"><a href="http://icon-worldwide.com/" target="_blank">ICON Worldwide</a></br>
-                  Designer, March&ndash;July 2012</br>
-                  Zurich, Switzerland</span><br>
-                  Worked directly with a creative team of designers and developers to concept and produce highly functional collateral and responsive web projects. Clients included: Credit Suisse, Sigma Aldrich, University of St. Gallen.</p>
+                  Designer, 03.12&ndash;07.12</br>
+                  Zurich, Switzerland</span></p>
+                  <p>Worked directly with a creative team of designers and developers to concept and produce highly functional collateral and responsive web projects.</p> 
+                  <p>Clients included: Credit Suisse, Sigma Aldrich, University of St. Gallen.</p>
                 </div>
                 <div class="expDetail">
                   <p><span class="title"><a href="http://dyadcom.com/" target="_blank">DYAD Communications</a></br>
-                  Design intern, May&ndash;September 2010<br> Philadelphia, PA</span></br>
-                  Assisted in studio production tasks including: image editing, preparing and handing off web mock ups to developers, pre-press production, and assembling printed mock ups of client collateral.</p>
+                  Design intern, 05.10&ndash;09.10<br> Philadelphia, PA</span></p>
+                  <p>Assisted in studio production tasks including: image editing, preparing and handing off web mock ups to developers, pre-press production, and assembling printed mock ups of client collateral.</p>
                 </div>
               </div>
             </div>
