--- a/sony-pictures.html
+++ b/sony-pictures.html
@@ -39,21 +39,22 @@
                     <h3>SonyPictures.com Before</h3>
                     <p>As the Sony Pictures website aged admins used old CMS fields to bend to new content types, which created a gap in user interaction, leaving users lost and frustrated. New functionality was needed for users to find key content they were looking for. In addition, the site looked outdated and needed an immersive redesign to create a modern look and put Sony Pictures back into the arena to compete with their biggest competitors.</p>
                   </div>
-                  <figure class="shadow">
-                    <img src="img/sony-1.png" alt="Sony After">
+                   <figure class="shadow">
+                    <img class="sonyHomepage" src="img/sony-homepage.png" alt="Sony After">
                   </figure>
-                  <figure class="shadow">
-                    <img src="img/sony-2.png" alt="Sony After">
                   </figure>
-                  <figure class="shadow">
-                    <img src="img/sony-3.png" alt="Sony After">
+                  <figure>
+                    <img class="sonySecondHomepage" src="img/sony-2.png" alt="Sony After">
                   </figure>
-                  <figure class="shadow">
-                    <img src="img/sony-4.png" alt="Sony After">
+                  <figure>
+                    <img class="sonyExplore" src="img/sony-macbook.png" alt="Sony After">
+                  </figure>
+                  <figure>
+                    <img class="sonyiPhone" src="img/sony-iphone.png" alt="Sony After">
                   </figure>
                   <div class="projectDetail" id="sonyDetail">
                     <h3>SonyPictures.com After</h3>
-                    <p>The Metal Toad UX + Design team collaborated shoulder-to-shoulder with engineering to create a design system that was consistent across the website, let users find content in expected places without any barriers, and worked. Our team created an engaging and dynamic showcase for Sony Pictures titles and properties, which is not only beautiful, but intuitive and efficient to manage.</p>
+                    <p>The Metal Toad UX + Design team collaborated with engineering to create a design system that was consistent across the website, let users find content in expected places without any barriers, and worked. Our team created an engaging and dynamic showcase for Sony Pictures titles and properties, which is not only beautiful, but intuitive and efficient to manage.</p>
                 </div>
                   <div id="moreProjects">
                   <div class="moreProjects">
