--- a/sony-pictures.html
+++ b/sony-pictures.html
@@ -25,7 +25,7 @@
           <main role="main">
             <div class="projectDetail" id="sonyDetail">
               <h2>Sony Pictures</h2>
-              <h3>UX and UI Design</h3>
+              <h3>UI, UX Design: User Flow, Wireframing, Protyping</h3>
               <p>Sonypictures.com is the public face of Sony Pictures Entertainment. Representing titles from Sony Pictures Home Entertainment, Sony Pictures Television and Motion Pictures Domestic, in addition to Crackle and Sony Rewards, there are over 3000 titles that are managed and presented through Sonypictures.com.</p> 
               <p>Sony Pictures needed to update both the front-end look and feel of their site, as well as the administrative experience, and thus decided to build out a brand new site with Drupal 8. Partnering with the Design + UX team for the front-end design and UI, Metal Toad created a Drupal 8 instance which allows administrators to manage content across multiple departments from within the CMS, while creating an engaging and dynamic showcase for Sony Pictures titles and properties.</p>
               <p>See the before and after below.</p>
@@ -34,8 +34,10 @@
               <div id="cssContainer">
                 <div class="projectImages">
                   <img class="full-width" src="img/sony-before-1.png" alt="Sony Before">
+                  <figcaption>Phase 1: Before</figcaption>
                   <img class ="full-width" src="img/sony-before-2.png" alt="Sony Before 2">
-                  <div class="projectDetail" id="sonyDetail">
+                  <figcaption>Phase 1: Before</figcaption>
+                  <div class="projectDetail" id="sonyDetail">  
                     <h3>SonyPictures.com Before</h3>
                     <p>As the Sony Pictures website aged admins used old CMS fields to bend to new content types, which created a gap in user interaction, leaving users lost and frustrated. New functionality was needed for users to find key content they were looking for. In addition, the site looked outdated and needed an immersive redesign to create a modern look and put Sony Pictures back into the arena to compete with their biggest competitors.</p>
                   </div>
