--- a/unfi.html
+++ b/unfi.html
@@ -25,7 +25,7 @@
           <main role="main">
             <div class="projectDetail" id="unfiDetail">
               <h2>UNFI Blue Marble</h2>
-              <h3>UX, UI Design</h3>
+              <h3>UI, UX Design, Design System</h3>
               <p>Blue Marble Brands is a small group of foodie professionals dedicated to bringing customers the best organic, non-GMO, and specialty foods from around the world made with the highest standards for quality and taste.</p>
 
               <p>With over 900 Blue Marble Brands product SKUs stored in Excel it was clear that Blue Marble needed to digitize and upgrade their existing management system.</p> 
@@ -53,6 +53,10 @@
                 <img src="img/bmb-after-2.png" alt="UNFI Blue Marble PIM After">
                </figure>
                <figcaption>Phase 2: After</figcaption>
+                <figure class ="figurePad">   
+                <img class="unfiStyleGuide" src="img/unfi-style-guide.png" alt="UNFI Blue Marble PIM After">
+               </figure>
+               <figcaption>Design system + style guide</figcaption>
               </div>
                 <div id="moreProjects">
                   <div class="moreProjects">
