--- a/lund-report.html
+++ b/lund-report.html
@@ -24,14 +24,29 @@
           <main role="main">
             <div class="projectDetail" id="lundDetail">
               <h2>Lund Report Refresh</h2>
-              <h3>Branding, UX, + Design</h3>
-              <p>In November 2015, Metal Toad participated in work sessions with Emotive Brand — an Oakland-based brand consultancy — to truly understand what Metal Toad offers and why we are uniquely valuable. These work sessions resulted in a refined positioning statement, promise, and tagline.</p>
-              <p>In February 2016, the Design and UX team undertook an extensive competitive analysis and brand positioning exercise to determine where we are — and where we are going — in the vast expanses of today’s software landscape. We leveraged our core values, our work with Emotive, empirical data, market research, and individual Toad input.</p>
+              <h3>UI: Wireframing, Visual Design</h3>
+              <p>The Lund Report is the first independent news site in Oregon dedicated to educating people about the inner workings of the health care industry.</p>
+              <p>In 2017 the Lund Report underwent a brand refresh. To compliment the work of their brand agency Metal Toad reflected the new look and feel across Lund Report's web presence. With a small budget, we took an efficient approach — keeping the bones of the website, we cleaned it up to be more legible and added a small handful of new features.</p>
+              <p>The process included rapid hand wireframes, presented to the client for approval — the process was lean and scrappy. Next the selected wireframes were cleaned digitally to make sure all stakeholders were aligned before moving into visual design. Finally, the visual design was applied on top of the wires.</p>
+              <p>See the before and after below.</p>
             </div>
             <div class="cssContainer">
               <div class="projectImages mtImages">
+                <figure class ="figurePad">
+                  <img class="lundBefore" src="img/lund-before.png" alt="Lund Report Website Before">
+               </figure>
+              <figcaption>Lund Report Before</figcaption>
                 <figure class="figurePad">
-                  <img class="lundWireframes"src="img/lund-wireframes.png" alt="Lund Report Wireframes">
+                  <img class="lundWireframes wireframeOne"src="img/lund-wireframes.png" alt="Lund Report Wireframes">
+                </figure>
+                <figure class="figurePad">
+                  <img class="lundWireframeTwo" src="img/lund-wireframes-2.png" alt="Lund Report Wireframe">
+                </figure>
+                 <figure class="figurePad">
+                  <img class="lundMobile"src="img/lund-mobile.png" alt="Lund Report Mobile Menus">
+                </figure>
+                 <figure class="figurePad">
+                  <img class="lundMacbook"src="img/lund-macbook.png" alt="Lund Report After">
                 </figure>
                   <div class="projectDetail" id="lundDetail">
                     <h3>Metal Toad Logo Before & After</h3>
@@ -40,43 +55,7 @@
                   </div>
 
                 </div>
-                <figure class ="figurePad">
-      						<img class="mtColorPalette"src="img/mt-color-palette.png" alt="Metal Toad Color Palette">
-                </figure>
-                <div class="projectDetail" id="lundDetail">
-                  <h3>Metal Toad's Color Palette</h3>
-                  <p>A secondary color palette was developed to expand upon the primary color palette. The secondary colors follow the characteristics of the brand’s primary orange. Bright and playful, there is an element of curiosity to them that ties in with Metal Toad's core values.</p>
-                </div>
-                <figure class ="figurePad">
-      						<img class="typefaces" src="img/mt-3.png" alt="Metal Toad's Typefaces">    
-                 </figure> 
-                  <div class="projectDetail" id="metalToadDetail">
-                  <h3>Typefaces</h3>
-                  <p>Metal Toad's previous typeface, Helvetica is difficult to read on screen and kept Metal Toad from embracing a brand all their own. Helvetica was replaced with two new typefaces — Whitney and Interstate.</p>
-                  <p>Whitney, Metal Toad's new primary typeface has a more organic structure than Helvetica, making it feel more warm and welcoming.</p>
-                  <p>Interstate and Whitney were intentionally chosen and paired together for Metal Toad to offer a complimentary and subtle sophistication that increases readability and enhances the user experience.</p>
-                </div>
-                  <figure>
-                    <img src="img/mt-6.png" alt="Metal Toad Discovery Deliverables">
-                  
-                    <figcaption>The refreshed brand applied to discovery materials.</figcaption>
-                  </figure>
                 
-                <div class="mt-9"> 
-                  <img src="img/mt-7.jpg" alt="Buyer Persona Offsite">
-                </div>
-                <div class="projectDetail" id="metalToadDetail">                    
-                <h3>Buyer Persona Offsite</h3>
-                <p>Following the Brand Refresh, the Design + UX team held an offsite to create Metal Toad's buyer personas based on research and interviews conducted with Metal Toad's clients, buyers, and stakeholders.<p> 
-                <p>The Design + UX, Engineering, and Marketing teams gained multi-faceted, first-hand insights of who our buyers are, motivations, goals, pain points, why/how they buy, and what core offering(s) they buy. This knowledge  helps Metal Toad prioritize who to design for, and determine what/how to design for them.</p>
-                </div>
-                  <img src="img/mt-8.png" alt="Metal Toad Brand Onboarding">
-                </div>
-                <div class="projectDetail" id="metalToadDetail">  
-                  <h3>Metal Toad Brand Onboarding</h3>
-                  <p>Within a month of each Metal Toad new hire's start date they are "brand onboarded." Brand onboarding explains why Metal Toad's brand is important through discussion around what a brand is, what it is made of, and a quick examination of some of the world's leading brands and what makes them so successful.</p>
-                  <p>Through the brand onboarding process new hires receive templates, tools, and a handly little guide to apply Metal Toad's brand to client deliverables and the language to successfully articulate Metal Toad's vision and mission within the technology and broader community.</p>
-                  <p>Metal Toad has found this process to be successful in empowering Metal Toad employees to be an agent of their brand and to wear the brand proudly.</p>
                 </div> 
                </div>
              </div>
@@ -99,7 +78,6 @@
                    </ul>
                  </div>
                </div>
-             </div>
           </main>
           <footer role="contactinfo">
             <div id="contact">
